kubernetes/qualys-namespace-secret.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: qualys-sensor
